Can't set el.type on a <button> element https://bugs.webkit.org/show_bug.cgi?id=14439

Patch by Edaena Salinas Jasso <edaena@apple.com> on 2012-06-12
Reviewed by Darin Adler.

Source/WebCore:

Test: fast/dom/HTMLButtonElement/change-type.html

* bindings/objc/PublicDOMInterfaces.h:
* html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::setType): Added implementation of setType method.
(WebCore):
* html/HTMLButtonElement.h:
(HTMLButtonElement): Added setType method.
* html/HTMLButtonElement.idl: Removed readonly restriction to the type variable.

LayoutTests:

* fast/dom/HTMLButtonElement/change-type-expected.txt: Added.
* fast/dom/HTMLButtonElement/change-type.html: Added.

Canonical link: https://commits.webkit.org/106780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120158 268f45cc-cd09-0410-ab3c-d52691b4dbfc